object/output.txt
array03_dynamic_complexcls02.cpp: In function ‘void testPointer()’:
array03_dynamic_complexcls02.cpp:138:8: error: invalid array assignment
  138 |   k1 = k2;
      |        ^~
object$ 
